--- a/src/App.scss
+++ b/src/App.scss
@@ -19,11 +19,13 @@
     margin: auto;
     width: 500px;
     height: 300px;
+//  background-color: rgba(127, 204, 242, 0.866);
 
     .weatherIcons{
         margin: 2rem;
         width: 100px;
         height: 100px;
+        background: none;
     }
 
     .weatherCity{
